# GLADyS

./: .aiexclude  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  CODEBASE_MAP.md  CONCEPT_MAP.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  buf.yaml  reading-list.md
.claude/: settings.json
.github/: pull_request_template.md
ai-companion/: .gitignore  README.md
cli/: README.md  _cache_client.py  _db.py  _docker_backend.py  _gladys.py  _health_client.py  _local_backend.py  _orchestrator.py  _service_base.py  _sync_check.py  _test_subscription.py  convergence_test.py  docker.py  fix_encoding.py  init_db.py  launch-runelite.ps1  local.py  proto_gen.py  setup_dev.py  verify_env.py  verify_local.py  workspace.py
docker/: docker-compose.yml
docs/: CONVENTIONS.md  GETTING_STARTED.md  INDEX.md  README.md  TECH_DEBT.md
packs/sensors/_archived/sudoku-sensor/: README.md  driver.js  pyproject.toml
plugins/sensors/calendar-sensor/: events.json  manifest.yaml  pyproject.toml
scripts/: README.md  _db.py  _docker_backend.py  _gladys.py  _local_backend.py  _orchestrator.py  _queue_client.py  _service_base.py  _test_subscription.py  docker.py  local.py  proto_sync.py  pyproject.toml  services.py  verify_env.py  verify_local.py
sdk/python/gladys-sensor-sdk/: README.md  pyproject.toml
sdk/python/gladys-sensor-sdk/src/gladys_sensor_sdk/: __init__.py  adapter.py  args.py  client.py  config.py  dispatcher.py  events.py  flow_control.py  heartbeat.py  lifecycle.py  registration.py  state.py
sdk/python/gladys-sensor-sdk/src/gladys_sensor_sdk/testing/: __init__.py  harness.py
sdk/python/gladys-sensor-sdk/tests/: conftest.py  test_adapter.py  test_args.py  test_dispatcher.py  test_emit_batch.py  test_events.py  test_flow_control.py  test_harness.py
src/lib/gladys_client/: pyproject.toml
src/lib/gladys_client/gladys_client/: __init__.py  cache.py  db.py  health.py  orchestrator.py
src/lib/gladys_common/: pyproject.toml
src/lib/gladys_common/gladys_common/: __init__.py
src/memory/python/: Dockerfile  pyproject.toml
src/memory/python/gladys_memory/: __init__.py  __main__.py  config.py  embeddings.py  grpc_server.py  memory_pb2.py  memory_pb2_grpc.py  storage.py
src/memory/python/scripts/: backfill_heuristic_embeddings.py  test_semantic_matching.py
src/memory/python/tests/: __init__.py  test_grpc.py  test_storage.py
src/memory/rust/: Cargo.toml  Dockerfile  build.rs
src/memory/rust/src/: client.rs  config.rs  lib.rs  logging.rs  main.rs  server.rs
src/memory/rust/tests/: integration_test.rs
src/orchestrator/: Dockerfile  README.md  pyproject.toml  run.py
src/orchestrator/gladys_orchestrator/: __main__.py  accumulator.py  config.py  event_queue.py  outcome_watcher.py  router.py  server.py  skill_registry.py
src/orchestrator/gladys_orchestrator/clients/: executive_client.py  memory_client.py  salience_client.py
src/orchestrator/proto/: common.proto  executive.proto  memory.proto  orchestrator.proto  types.proto
src/orchestrator/tests/: test_accumulator.py  test_router.py  test_server.py
src/services/dashboard/: pyproject.toml
src/services/dashboard/backend/: env.py  main.py  utils.py
src/services/dashboard/backend/routers/: events.py  fires.py  heuristics.py  llm.py  logs.py  metrics.py  responses.py  services.py
src/services/dashboard/frontend/: index.html
src/services/dashboard/frontend/components/: event_row.html  heuristics.html  heuristics_form.html  heuristics_row.html  heuristics_rows.html  knowledge.html  lab.html  learning.html  learning_row.html  learning_rows.html  llm.html  logs.html  logs_lines.html  metrics.html  queue_row.html  response.html  response_detail.html  response_rows.html  settings.html
src/services/dashboard/frontend/components/widgets/: data_table.html  expandable_row.html  feedback_actions.html  json_viewer.html
src/services/dashboard/frontend/css/: style.css
src/services/dashboard/frontend/js/: app.js  events.js
src/services/dashboard/frontend/js/widgets/: SelectionManager.js
src/services/dashboard/tests/: conftest.py  test_api.py  test_batch_events.py  test_events_converter.py  test_feedback.py  test_heuristics_rows.py  test_integration.py  test_learning_rows.py  test_llm_api.py  test_logs_rows.py  test_responses.py  test_router_registration.py  test_settings_api.py
src/services/dashboard/tests/fixtures/: batch_5_events.json
src/services/executive/: Dockerfile  README.md  pyproject.toml  stub_server.py
src/services/executive/gladys_executive/: __main__.py  server.py
src/services/executive/tests/: test_bootstrapping.py  test_decision_strategy.py  test_llm_provider.py  test_provide_feedback.py  test_salience_extraction.py
src/services/memory/: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
src/services/memory/gladys_memory/: config.py  grpc_server.py  memory_pb2.py  memory_pb2.pyi  storage.py  types_pb2.py
src/services/memory/tests/: conftest.py  test_embeddings.py  test_grpc.py  test_grpc_events.py  test_storage.py  test_storage_events.py
src/ui/: README.md  USER_GUIDE.md  dashboard.py  pyproject.toml
tests/integration/: conftest.py  docker-compose.yml  pyproject.toml  test_cache_management.py  test_e2e_query.py  test_feedback_e2e.py  test_flight_recorder.py  test_generalization.py  test_heuristic_flow.py  test_implicit_feedback.py  test_killer_feature.py  test_lab_bench.py  test_learning_implicit_e2e.py  test_llm_response_flow.py  test_orchestrator_memory.py  test_outcome_watcher_e2e.py  test_scenario_5_learning_loop.py  test_semantic_memory.py  test_skill_registry.py  test_subscription_delivery.py  test_td_learning.py  test_trace_id_flow.py
tools/codebase-drift/: drift_check.py  pyproject.toml  test_drift.py
tools/codebase-info/: codebase_info.py  pyproject.toml  test_codebase_info.py
tools/docsearch/: README.md  __init__.py  audit.py  docsearch.py  pyproject.toml  search.py  test_audit.py  test_search.py
tools/questions-report/: pyproject.toml  report.py  test_report.py
(+375 files in other folders)
