[project]
name = "codebase-drift"
version = "0.1.0"
description = "Validates CODEBASE_MAP.md against the actual codebase"
authors = [
    { name = "Gemini", email = "gemini@example.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
drift-check = "drift_check:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
