[project]
name = "codebase-info"
version = "0.1.0"
description = "Generates live codebase reference data from source files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codebase-info = "codebase_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
