[project]
name = "calendar-sensor"
version = "0.1.0"
description = "GLADyS calendar sensor for monitoring upcoming events"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
google = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
