[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gladys-sensor-sdk"
version = "0.1.0"
description = "Python SDK for GLADyS sensors"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GLADyS Team"}
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gladys_sensor_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["ANN101", "ANN102"]
