[project]
name = "gladys-common"
version = "0.1.0"
description = "GLADyS Shared Utilities"
authors = [
    { name = "Mike Mulcahy" },
    { name = "Scott Mulcahy" },
]
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "colorama>=0.4",  # Required for colored output on Windows
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gladys_common"]
