[project]
name = "gladys-dashboard"
version = "0.1.0"
description = "GLADyS Dashboard V2"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn",
    "sse-starlette",
    "jinja2",
    "structlog",
    "grpcio",
    "grpcio-tools",
    "psycopg2-binary",
]

[project.optional-dependencies]
test = ["pytest", "httpx", "pytest-playwright"]

[tool.setuptools]
packages = ["backend"]

[tool.uv]
package = true

[tool.pytest.ini_options]
# Using pytest-anyio for async tests (required by playwright)
# anyio handles both asyncio and trio backends
markers = [
    "anyio: mark test as async (auto-applied to async functions)",
]
