[project]
name = "gladys-executive"
version = "0.1.0"
description = "GLADyS Executive Stub for integration testing"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "aiohttp>=3.9.0",
    "protobuf>=4.25.0",
    "python-dotenv>=1.0.0",
    # Shared logging
    "gladys-common",
]

[tool.uv.sources]
gladys-common = { path = "../../lib/gladys_common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gladys_executive"]
