[project]
name = "gladys-memory"
version = "0.1.0"
description = "GLADyS Memory Subsystem - Storage Path"
authors = [
    { name = "Mike Mulcahy" },
    { name = "Scott Mulcahy" },
]
requires-python = ">=3.11"
dependencies = [
    # Database
    "asyncpg>=0.29",
    "pgvector>=0.3",

    # gRPC
    "grpcio>=1.60",
    "grpcio-tools>=1.60",

    # Embeddings
    "sentence-transformers>=2.2",
    "requests>=2.28",  # Required by huggingface-hub for model downloads

    # Utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",

    # GLADyS shared
    "gladys-common",
]

[tool.uv.sources]
gladys-common = { path = "../../lib/gladys_common", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test requiring PostgreSQL",
]
